can comment wall posts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="google_static_map">http://maps.googleapis.com/maps/api/staticmap?center=%s</string>
     <string name="json_url">"http://promoteeducate1.appspot.com/api/structure/app/fe1222a924fa7c649d33a36c5532594fb239fb6f"</string>
     <string name="server_url">http://promoteeducate1.appspot.com</string>
+    <string name="comment">Комментарий</string>
+    <string name="send">Отправить</string>
 
 </resources>
